--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: 5px solid red;
 }
 .landingContainer .landing .landingSpan {
   font-size: 6.5rem;
@@ -119,9 +120,11 @@
   height: 60%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   text-align: center;
   align-items: center;
   font-family: "Spectral", sans-serif;
+  border: 2px solid lightgreen;
 }
 .landingContainer .landing .txtarea h1 {
   font-size: 6.5rem;
@@ -138,10 +141,11 @@
 }
 .aboutContainer .abtBox1 {
   width: 100%;
-  height: 25%;
+  height: 50%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 }
 .aboutContainer .abtBox1 h1 {
   font-size: 5rem;
@@ -149,7 +153,7 @@
 }
 .aboutContainer .abtBox2 {
   width: 100%;
-  height: 75%;
+  height: 50%;
   display: flex;
   align-items: center;
 }
@@ -214,43 +218,46 @@
   gap: 4rem;
   align-items: center;
   flex-direction: column;
+  border: 5px solid teal;
+  height: 100%;
   width: 100%;
 }
 .projectContainer .projectCards .cards {
   width: 100%;
-  height: 250px;
+  height: 70%;
   display: flex;
+  justify-content: center;
+  align-items: center;
   color: #212838;
   background: #eceef4;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(236, 238, 244, 0.3);
-}
-.projectContainer .projectCards .cards:hover {
-  border: 2px solid rgba(91, 120, 199, 0.3);
 }
 .projectContainer .projectCards .cards .cardPic {
-  width: 40%;
+  width: 100%;
+  height: 50%;
+}
+.projectContainer .projectCards .cards .cardPic img {
+  width: 100%;
   height: 100%;
 }
 .projectContainer .projectCards .cards .cardDisc {
-  width: 60%;
-  height: 100%;
+  width: 100%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  text-align: center;
+  margin: 2%;
+  text-align: start;
 }
 .projectContainer .projectCards .cards .cardDisc h2 {
   font-family: "Spectral", sans-serif;
   font-size: 3rem;
 }
 .projectContainer .projectCards .cards .cardDisc p {
-  text-align: center;
   font-size: 2rem;
+  width: 70%;
   line-height: 2;
   font-family: "Poppins", sans-serif;
-  margin: 2%;
 }
 .projectContainer .projectCards .cards .cardDisc .projBtn {
   font-family: "Spectral", sans-serif;
@@ -341,16 +348,13 @@
   .navContainer .naviLinks.openNav .navLi.fade {
     transition: all 0.4s ease 0.2s;
   }
-  .landingContainer h1 {
-    color: red;
-  }
   .landingContainer .landing {
     width: 100%;
     height: 100%;
   }
   .landingContainer .landing .txtarea {
     width: 80%;
-    height: 80%;
+    height: 55%;
   }
   .landingContainer .landing .txtarea h1 {
     font-size: 4rem;
