--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,11 @@
 .navContainer {
   width: 100vw;
   height: 15vh;
-  background: #eceef4;
   position: fixed;
+  z-index: 90;
+  background: rgba(236, 238, 244, 0.9);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 .navContainer .naviLinks {
   display: flex;
@@ -30,7 +33,6 @@
   position: absolute;
   text-align: center;
   list-style: none;
-  z-index: 999;
   opacity: 1;
   clip-path: circle(600px at 300% 50%);
   -webkit-clip-path: circle(600px at 300% 50%);
@@ -108,7 +110,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 5px solid red;
 }
 .landingContainer .landing .landingSpan {
   font-size: 6.5rem;
@@ -124,7 +125,6 @@
   text-align: center;
   align-items: center;
   font-family: "Spectral", sans-serif;
-  border: 2px solid lightgreen;
 }
 .landingContainer .landing .txtarea h1 {
   font-size: 6.5rem;
@@ -217,14 +217,12 @@
   display: flex;
   gap: 4rem;
   align-items: center;
-  flex-direction: column;
-  border: 5px solid teal;
   height: 100%;
   width: 100%;
 }
 .projectContainer .projectCards .cards {
-  width: 100%;
-  height: 70%;
+  width: 40%;
+  height: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -255,7 +253,7 @@
 }
 .projectContainer .projectCards .cards .cardDisc p {
   font-size: 2rem;
-  width: 70%;
+  width: 60%;
   line-height: 2;
   font-family: "Poppins", sans-serif;
 }
@@ -279,14 +277,22 @@
 
 .contactContainer {
   width: 100vw;
-  height: 40vh;
+  height: 65vh;
+  display: flex;
+  justify-content: center;
   background: #eceef4;
 }
-.contactContainer .txtBox {
-  width: 100%;
+.contactContainer .svgContainer2 {
+  width: 40%;
   height: 100%;
   display: flex;
-  align-items: center;
+  justify-content: center;
+}
+.contactContainer .txtBox {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  text-align: center;
   justify-content: center;
   flex-direction: column;
 }
@@ -299,6 +305,8 @@
 .contactContainer .txtBox p {
   font-family: "Poppins", sans-serif;
   font-size: 2rem;
+  margin: 3%;
+  margin-right: 5rem;
 }
 
 .footContainer {
@@ -367,7 +375,7 @@
   }
   .aboutContainer .abtBox2 p {
     font-size: 1.6rem;
-    margin: 2%;
+    margin: 4%;
   }
   .projectContainer .projectTxt h1 {
     font-size: 2.5rem;
