--- a/css/styles.scss
+++ b/css/styles.scss
@@ -233,10 +233,11 @@ backdrop-filter: blur(5px);
 .projectContainer{
     background: #eceef4;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    //border: 2px solid red;
 
     .projectTxt{
         width: 100%;
@@ -268,6 +269,7 @@ backdrop-filter: blur(5px);
             //flex-direction: column;
             justify-content: space-around;
             align-items: center;
+            overflow: hidden;
             //padding: 1rem;
             //border: 2px solid green;
 
@@ -303,10 +305,11 @@ backdrop-filter: blur(5px);
         width: 100%;
 
         .cards{
-            width: 40%;
-            height: 40%;
+            width: 50%;
+            height: 70%;
             display: flex;
             //flex-direction: column-reverse;
+            overflow: hidden;
             justify-content: center;
             align-items: center;
             color: #212838;
@@ -321,7 +324,7 @@ backdrop-filter: blur(5px);
 
             .cardPic{
                 width: 100%;
-                height: 50%;
+                height: 100%;
                 //display: block;
                 //border: 2px solid lightcoral;
 
@@ -339,7 +342,7 @@ backdrop-filter: blur(5px);
                 width: 100%;
                 height: 50%;
                 display: flex;
-                //display: none;
+                display: none;
                 flex-direction: column;
                 justify-content: center;
                 margin: 2%;
