--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-size: 62.5%;
-
+    //overflow: hidden;
     ::-webkit-scrollbar
     {
         display: none;
@@ -48,10 +48,10 @@ backdrop-filter: blur(5px);
         list-style: none;
         //z-index: 999;
         //display: none;
-        opacity: 1;
-        clip-path: circle(600px at 300% 50%);
-        -webkit-clip-path: circle(600px at 300% 50%);
-        transition: all 0.5s ease-out;        
+        opacity: 0;
+        clip-path: circle(200px at 140% -5%);
+        -webkit-clip-path: circle(200px at 140% -5%);
+        transition: all 0.5s ease-out;      // fading menu  
         //pointer-events: none;    
         
     
@@ -84,8 +84,8 @@ backdrop-filter: blur(5px);
 
         //display: inline;
         opacity: 1;
-        clip-path: circle(2000px at 80% 50%);
-        -webkit-clip-path: circle(2000px at 80% 50%);
+        clip-path: circle(2000px at 20% 10%);
+        -webkit-clip-path: circle(2000px at 20% 10%);
         pointer-events: all;
         
 
@@ -93,10 +93,10 @@ backdrop-filter: blur(5px);
     }
 
     .naviLinks.closeNav{
-        //opacity: 0;
+        //opacity: 1;
         clip-path: circle(100px at 90% -20%);
         -webkit-clip-path: circle(100px at 90% -20%);
-        transition: all 0.5s ease-in;        
+        transition: all 0.8s ease-in;        //fading menu
         pointer-events: none;
         //background: #eceef4;
     }
@@ -245,7 +245,7 @@ backdrop-filter: blur(5px);
 
         h1{
             padding: 2rem;
-            font-size: 3rem;
+            font-size: 5rem;
             font-family: 'Spectral', sans-serif;
             text-align: center;
         }
@@ -269,7 +269,7 @@ backdrop-filter: blur(5px);
             //flex-direction: column;
             justify-content: space-around;
             align-items: center;
-            overflow: hidden;
+            overflow-x: hidden;
             //padding: 1rem;
             //border: 2px solid green;
 
@@ -291,113 +291,79 @@ backdrop-filter: blur(5px);
                 }
             }
         }
-    }
-
-    .projectCards{
-        display: flex;
-        //justify-content: space-evenly;
-        gap: 4rem;
-        align-items: center;
-        //flex-direction: column;
-        //flex-wrap: wrap;
-        //border: 5px solid teal;
-        height: 100%;
-        width: 100%;
-
-        .cards{
-            width: 50%;
-            height: 70%;
-            display: flex;
-            //flex-direction: column-reverse;
-            overflow: hidden;
-            justify-content: center;
-            align-items: center;
-            color: #212838;
-            background: #eceef4;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-           // backdrop-filter: blur(7.5px);
-           // -webkit-backdrop-filter: blur(7.5px);
-            //border: 1px solid rgba(236, 238, 244, 0.3);     
-                   //border: 2px solid orange;
-            //border-radius: 0.8rem;
-        
-
-            .cardPic{
-                width: 100%;
-                height: 100%;
-                //display: block;
-                //border: 2px solid lightcoral;
-
-                img{
-                    width: 100%;
-                    height: 100%;
-                }
-
-                //&:hover{
-                //    display: none;
-                //}
-            }
-
-            .cardDisc{
-                width: 100%;
-                height: 50%;
-                display: flex;
-                display: none;
-                flex-direction: column;
-                justify-content: center;
-                margin: 2%;
-                //border: 2px solid lightseagreen;
-                //align-items: center;
-                text-align: start;
-
-                //&:hover{
-                //    display: block;
-                //}
-
-                h2{
-                    font-family: "Spectral", sans-serif;
-                    font-size: 3rem;
-                    
-                }
-//
-                p{
-                    //text-align: left;
-                    font-size: 2rem;
-                    width: 60%;
-                    line-height: 2;
-                    font-family: 'Poppins', sans-serif;
-                    //margin: 2%;
-                    //padding-bottom: 5%;
-                }
-
-                .projBtn{
-                    font-family: "Spectral", sans-serif;
-                    font-size: 1rem;
-                    width: 100px;
-                    height: 40px;
-                    background: rgba(236, 238, 244, 0.34);
-                    border-radius: 8px;
-                    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-                    //backdrop-filter: blur(7.5px);
-                    //-webkit-backdrop-filter: blur(7.5px);
-                    border: 1px solid rgba(255, 255, 255, 0.3);
-
-                    &:hover{
-                        background: rgba(91, 120, 199, 0.93);
-                        color: #eceef4;
-                    }
-                }
-
-          
-            }
-
-        }
-
-        .flipIt{
-            flex-direction: row-reverse;
-        }
-    }
+    }      
 }
+
+.projectCardSection {
+    display:flex;
+    width: 100vw;
+    height: 100vh;	
+    //outline:1px solid red;
+  
+      .left {
+          width:50%;
+  
+          .detailsWrapper {
+              margin:auto;
+              width:80%;
+          
+              .cards{
+                  height:100vh;
+                  //outline:1px solid green;
+                  display:flex;
+                  flex-direction:column;
+                  justify-content:center;
+                  padding: 2rem;
+                  text-align: start;
+              
+                  h2{
+                      font-size: 3rem;
+                      font-family: 'Spectral', sans-serif;
+                      color: #5b78c7;
+                  }
+              
+                  p{
+                      font-size: 2rem;
+                      line-height: 2;
+                      font-family: 'Poppins', sans-serif;
+                  }
+              }
+          }
+      }
+  
+      .right {
+          //outline:1px solid purple;
+          width:50%;
+          height:100vh;
+          display:flex;
+          flex-direction:column;
+          justify-content:center;
+  
+          .photos {
+              width:40vw;
+              height:40vw;
+              //background:maroon;
+              position:relative;
+              //border-radius: 1rem;
+          
+              .photo {
+                  position:absolute;
+                  width:100%;
+                  height:100%;
+                  //border-radius: 1rem;
+              
+                  img{
+                      width: 100%;
+                      height: 100%;
+                      border-radius: 1rem;
+                  }
+              }
+              
+          }
+      }
+  
+  }
+  
 
 .contactContainer{
     width: 100vw;
