--- a/css/styles.css
+++ b/css/styles.css
@@ -620,16 +620,23 @@ body {
   }
   .mainSection {
     width: 100vw;
+    height: 80vh;
+    border: 2px solid blue;
   }
   .mainSection .txtArea {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
+    border: 2px solid green;
   }
   .mainSection .txtArea .webdevTxt {
-    font-size: 3.5rem;
+    font-size: 4.5rem;
   }
   .mainSection .txtArea .mainP {
-    font-size: 3.5rem;
+    font-size: 3rem;
+  }
+  .aboutSection {
+    width: 100vw;
+    height: 100vh;
   }
   .aboutSection .box1 .aboutH1 {
     text-align: center;
