--- a/css/styles.css
+++ b/css/styles.css
@@ -620,13 +620,14 @@ body {
   }
   .mainSection {
     width: 100vw;
+    height: 70vh;
   }
   .mainSection .txtArea {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
   }
   .mainSection .txtArea .webdevTxt {
-    font-size: 3.5rem;
+    font-size: 4rem;
   }
   .mainSection .txtArea .mainP {
     font-size: 3.5rem;
