--- a/css/styles.scss
+++ b/css/styles.scss
@@ -522,7 +522,7 @@ body {
   .mainSection {
     width: 100vw;
     height: 100vh;
-    border: 2px solid #5b78c7;
+    //border: 2px solid #5b78c7;
 
     .txtArea {
       width: 100%;
